# QtQuick_Qml_training

./: .gitignore  .gitmodules  README.md
exercices/contacts/: main.cpp
exercices/contacts/qml/project/: ActivityPanel.qml  ContactModel.qml  ContactPage.qml
project/contacts/: CMakeLists.txt
project/contacts/qml/: Main.qml
project/contacts_solution/: CMakeLists.txt
project/contacts_solution/qml/: Main.qml
project/contacts_solution/qml/project/: ContactCard.qml
resources/: Template.qml
